app/bin/test/programs/invalid/conditionals/mismachedTypesUsingNestedConditionals.exe
// Mismatched types from nested 'if' statement
foo main() -> Int = {
    if true then {
        if false then () else ()
    } else {
        2
    }
}
